--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "string.h": "c"
     }
 }
