--- a/exams/.vscode/settings.json
+++ b/exams/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "string.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "xstring": "c",
+        "stdlib.h": "c",
+        "list.h": "c"
     }
 }
